# donkeyglue-backend

./: .gitignore  Cargo.toml  README.md  deploy.sh  example.env
assets/: words.txt
old/: main.rs
old/agent/: mod.rs
old/game/: game.rs  game_state.rs  seed_words.rs
old/routes/: clue.rs  game.rs  guess.rs
postman/: DonkeyGlue.postman_collection.json
src/: app_error.rs  db.rs  game.rs  main.rs
src/agent/: openai_spymaster.rs
src/game/: game.rs  game_controller.rs  game_master.rs  game_state.rs  mod.rs  simulator.rs  word_bank.rs
src/game/agent/: chatgpt.rs  mod.rs  openai_operative.rs  openai_spymaster.rs  player.rs  utils.rs
src/operative/: mod.rs  openai.rs  openai_operative.rs  openai_spymaster.rs  player.rs
src/routes/: clue.rs  game.rs  guess.rs  mod.rs  root.rs
src/spymaster/: mod.rs
