[package]
name = "donkeyglue-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
anyhow = "1.0"
futures = "0.3"
headers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
async-trait = "0.1"
async-openai = "0.14"
regex = "1.9"
backoff = { version = "0.4.0", features = ["tokio"] }
