[package]
name = "donkeyglue-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-openai = "0.17"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3"
headers = "0.4"
itertools = "0.12"
rand = "0.8"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
