[package]
name = "donkeyglue-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-openai = "0.28"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
backoff = { version = "0.4.0", features = ["tokio"] }
dotenvy = "0.15.7"
headers = "0.4"
itertools = "0.14"
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
